--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ img {
   letter-spacing: 0.02em;
   color: #2e2f42;
   padding: 24px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-link:hover,
 .header-link:focus {
@@ -111,12 +112,20 @@ img {
   color: #404bbf;
   text-decoration: underline;
 }
-.header-link {
-  text-decoration: none;
-}
-.header-link:hover,
-.header-link:focus {
+
+.current {
+  position: relative;
   color: #404bbf;
+}
+.current::after {
+  content: "";
+  position: absolute;
+  background-color: #404bbf;
+  left: 0;
+  bottom: -1px;
+  border-radius: 2px;
+  width: 100%;
+  height: 4px;
 }
 .address {
   font-style: normal;
@@ -129,7 +138,9 @@ img {
   color: #434455;
   font-style: normal;
   letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .address .contacts:hover,
 .address .contacts:focus {
   color: #404bbf;
@@ -140,6 +151,15 @@ img {
   background-color: #2e2f42;
   text-align: center;
   padding: 188px 0;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-image.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  margin: 0 auto;
+  max-width: 1440px;
 }
 
 .hero-title {
@@ -208,6 +228,16 @@ img {
 .text {
   letter-spacing: 0.02em;
 }
+.about-icon {
+  display: flex;
+  justify-content: center;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  background-color: #f4f4fd;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  margin-bottom: 8px;
+}
 
 /* ==========================      TEAM      ================================= */
 .team {
@@ -239,6 +269,18 @@ img {
   border-radius: 0 0 4px 4px;
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+.social-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.social-list-item {
+  width: calc((100% - 72px) / 4);
+}
+.social-list-link {
+  display: block;
+  line-height: 0;
 }
 
 .team-spec {
