--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ img {
   background-color: #f4f4fd;
 }
 .member-container {
-  padding: 32px 0;
+  padding: 32px 16px;
 }
 .team-title {
   margin-bottom: 72px;
@@ -274,13 +274,24 @@ img {
   display: flex;
   justify-content: center;
   gap: 24px;
+  padding-top: 8px;
 }
 .social-list-item {
   width: calc((100% - 72px) / 4);
 }
+.social-list-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+}
 .social-list-link {
   display: block;
   line-height: 0;
+  fill: #f4f4fd;
 }
 
 .team-spec {
@@ -308,6 +319,34 @@ img {
 .avatar-title {
   margin-bottom: 8px;
 }
+.portfolio-list-container {
+  position: relative;
+  overflow: hidden;
+}
+.portfolio-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-list-container:hover .portfolio-overlay {
+  transform: translateY(0%);
+}
+.portfolio-overlay-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding-top: 40px;
+  padding-right: 32px;
+  padding-left: 32px;
+  text-align: left;
+}
 
 /* ==========================       FOOTER        ================================= */
 .footer {
@@ -315,16 +354,58 @@ img {
   padding-top: 100px;
   padding-bottom: 100px;
 }
+.footer-container {
+  display: flex;
+  align-items: baseline;
+}
+.footer-logo-container {
+  margin-right: 120px;
+}
 .foot-text {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
 }
+
 .foot-logo {
   display: inline-block;
   margin-bottom: 16px;
 }
 .logo .foot-studio {
   color: #f4f4fd;
+}
+.footer-social-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+}
+.footer-social-icon {
+  fill: #f4f4fd;
+}
+.footer-social-list {
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+  padding-top: 16px;
+}
+.footer-social-item {
+  width: calc((100% - 36px) / 4);
+}
+
+.footer-social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background-color: #31d0aa;
 }
