--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,8 @@ img {
 .page-header {
   background-color: #ffffff;
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -160,6 +162,7 @@ img {
   background-position: center;
   margin: 0 auto;
   max-width: 1440px;
+  background-size: cover;
 }
 
 .hero-title {
@@ -190,6 +193,7 @@ img {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   margin-left: auto;
   margin-right: auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero .button:hover,
 .hero .button:focus {
@@ -231,6 +235,8 @@ img {
 .about-icon {
   display: flex;
   justify-content: center;
+  align-items: center;
+  height: 112px;
   border: 1px solid #8e8f99;
   border-radius: 4px;
   background-color: #f4f4fd;
@@ -244,7 +250,7 @@ img {
   background-color: #f4f4fd;
 }
 .member-container {
-  padding: 32px 16px;
+  padding: 32px 0;
 }
 .team-title {
   margin-bottom: 72px;
@@ -275,22 +281,32 @@ img {
   justify-content: center;
   gap: 24px;
   padding-top: 8px;
+  padding-right: 16px;
+  padding-left: 16px;
 }
 .social-list-item {
   width: calc((100% - 72px) / 4);
 }
 .social-list-container {
+  width: 40px;
+  height: 40px;
+}
+.social-list-link {
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 40px;
-  height: 40px;
+  line-height: 0;
   border-radius: 50%;
   background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social-list-link {
-  display: block;
-  line-height: 0;
+.social-list-link:hover,
+.social-list-link:focus {
+  background-color: #404bbf;
+}
+.social-list-icon {
   fill: #f4f4fd;
 }
 
@@ -314,8 +330,12 @@ img {
 }
 .portfolio-list-item {
   width: calc((100% - 48px) / 3);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.portfolio-list-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 .avatar-title {
   margin-bottom: 8px;
 }
@@ -323,29 +343,25 @@ img {
   position: relative;
   overflow: hidden;
 }
-.portfolio-overlay {
+
+.portfolio-list-item:hover .portfolio-overlay-text {
+  transform: translateY(0%);
+}
+.portfolio-overlay-text {
   position: absolute;
   top: 0;
-  left: 0;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding-top: 40px 32px;
+  text-align: left;
   width: 100%;
   height: 100%;
   background-color: #4d5ae5;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio-list-container:hover .portfolio-overlay {
-  transform: translateY(0%);
-}
-.portfolio-overlay-text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0.02em;
-  color: #f4f4fd;
-  padding-top: 40px;
-  padding-right: 32px;
-  padding-left: 32px;
-  text-align: left;
 }
 
 /* ==========================       FOOTER        ================================= */
@@ -381,6 +397,7 @@ img {
   line-height: 150%;
   letter-spacing: 0.02em;
   color: #ffffff;
+  margin-bottom: 16px;
 }
 .footer-social-icon {
   fill: #f4f4fd;
@@ -389,7 +406,10 @@ img {
   display: flex;
   justify-content: center;
   gap: 16px;
-  padding-top: 16px;
+}
+.footer-social-container {
+  width: 40px;
+  height: 40px;
 }
 .footer-social-item {
   width: calc((100% - 36px) / 4);
@@ -399,8 +419,8 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 40px;
-  height: 40px;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
