--- a/css/style.css
+++ b/css/style.css
@@ -285,12 +285,10 @@ img {
   padding-left: 16px;
 }
 .social-list-item {
-  width: calc((100% - 72px) / 4);
-}
-.social-list-container {
   width: 40px;
   height: 40px;
 }
+
 .social-list-link {
   width: 100%;
   height: 100%;
@@ -330,7 +328,7 @@ img {
 }
 .portfolio-list-item {
   width: calc((100% - 48px) / 3);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-list-item:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
@@ -355,7 +353,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  padding-top: 40px 32px;
+  padding: 40px 32px;
   text-align: left;
   width: 100%;
   height: 100%;
@@ -407,12 +405,10 @@ img {
   justify-content: center;
   gap: 16px;
 }
-.footer-social-container {
+
+.footer-social-item {
   width: 40px;
   height: 40px;
-}
-.footer-social-item {
-  width: calc((100% - 36px) / 4);
 }
 
 .footer-social-link {
